working canvas, working on spacing then moving on to stopping height of bars

--- a/public/main.css
+++ b/public/main.css
@@ -20,4 +20,5 @@ label {
 	margin: auto;
 	height: 60vh;
 	width: 80%;
+	z-index: 20;
 }
